--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-*{
+* {
     margin: 0px;
     padding: 0px;
     /* display: flex; */
@@ -7,59 +6,70 @@
 
 }
 
-html, body {
+html,
+body {
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     box-sizing: border-box;
 }
+
 img {
     width: 100%;
 }
-.header{
+
+.header {
     display: flex;
     flex-direction: row;
     width: 99%;
 }
-.sub-header{
+
+.sub-header {
     margin-left: auto;
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
-.navbar{
+
+.navbar {
     margin-left: auto;
     margin-bottom: 10px;
     padding: 20px;
 }
-.menu{
+
+.menu {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 20px;
 }
-.top-icon{
+
+.top-icon {
     margin-left: auto;
     padding: 10px;
 }
-.ham{
+
+.ham {
     display: none;
 }
-.ham div{
+
+.ham div {
     display: block;
     width: 40px;
     height: 6px;
     margin: 5px 0;
     background-color: black;
 }
-.one{
-    background-color:brown;
+
+.one {
+    background-color: brown;
     border-radius: 10px;
     width: 150px;
     height: 50px;
     margin-top: 10px;
     border: none;
 }
-.background-img{
-    background-image: url(sp-homepage2a-2040x758-44972.jpg);
+
+.background-img {
+    background-image: url(image/sp-homepage2a-2040x758-44972.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -68,90 +78,115 @@ flex-direction: column;
     margin-top: 10px;
     color: aliceblue;
 }
-.text{
-padding-left: 100px;
+
+.text {
+    padding-left: 100px;
     padding-top: 130px;
 }
-.exploretext{
+
+.exploretext {
     padding-top: 5px;
     text-align: center;
     margin-top: 50px;
 }
-.selfiepics{
+
+.selfiepics {
     display: flex;
     flex-direction: row;
-        margin-top: 50px;
-        width: 99%;
-        justify-content: space-evenly;
-        }
-.bpics{
-        box-sizing: border-box;
-        width: 100%;
-        }  
-.bpics:hover{
+    margin-top: 50px;
+    width: 99%;
+    justify-content: space-evenly;
+}
+
+.bpics {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.bpics:hover {
     transform: scale(1.5);
     transition: 1.5s;
 }
-.shoptext{
-    text-align:center;
+
+.shoptext {
+    text-align: center;
     margin-top: 50px;
-    }
-.apparelpics, .img1, .img2, .img3, .img4{
+}
+
+.apparelpics,
+.img1,
+.img2,
+.img3,
+.img4 {
     width: 100%;
 }
-.apparelpics{
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        margin-top: 50px;
-        text-align: center;
-        justify-content: space-around;
-        }
-.hrmonitorpics{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        margin-top: 50px;
-        width: 100%;
-        box-sizing: border-box;
-        text-align: center;
-        }
-.hrmonitorpics, .img5, .img6, .img7, .img8,{
-            width: 100%;
-        }
-.hpselfgroup{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-top: 50px;
-        width: 100%;
-    }
-.Atext{
-        text-align: center;
-    }
-.small-img{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        width: 100%;
-        box-sizing: border-box;
-        width: 100%;
-        height:100%;
-    }
-.ourstorytext{
-        text-align: center;
-        margin-top: 50px;
-        width: 100%;
-    }
-.background-colour{
+
+.apparelpics {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.hrmonitorpics {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 50px;
+    width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.hrmonitorpics,
+.img5,
+.img6,
+.img7,
+.img8,
+    {
+    width: 100%;
+}
+
+.hpselfgroup {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.Atext {
+    text-align: center;
+}
+
+.small-img {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 100%;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+}
+
+.ourstorytext {
+    text-align: center;
+    margin-top: 50px;
+    width: 100%;
+}
+
+.background-colour {
     background-color: rgb(241, 67, 67);
     height: 250px;
     margin-top: 50px;
     text-align: center;
-    width: 100%;    
+    width: 100%;
     box-sizing: border-box
-        }
-.bpic{
+}
+
+.bpic {
     flex: 50%;
     height: 350px;
     width: 40%;
@@ -159,38 +194,44 @@ padding-left: 100px;
     position: absolute;
 
 }
-.menbikers{
+
+.menbikers {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 15px;
-    box-sizing: border-box; 
-        width: 100%;
-    }
-.bikertext{
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.bikertext {
     margin-top: 25px;
     padding: 30px;
     margin-left: 45%;
     text-align: left;
 }
-.feedback{
+
+.feedback {
     margin-top: 100px;
     text-align: center;
 }
-.girlbiker{
+
+.girlbiker {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;  
+    justify-content: space-evenly;
     margin-top: 50px;
     box-sizing: border-box;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
-.femalebiker{
+
+.femalebiker {
     position: relative;
     overflow: hidden;
 }
-.overflow{
+
+.overflow {
     position: absolute;
     top: -55px;
     right: -40px;
@@ -199,79 +240,92 @@ padding-left: 100px;
     bottom: -30px;
     transform: rotate(-15deg)
 }
-.Btext sup{
+
+.Btext sup {
     content: '❝';
     font-size: 45px;
-    color:red; 
+    color: red;
     font-family: Arial, Helvetica, sans-serif;
 }
-.Btext{
+
+.Btext {
     text-align: center;
     padding-top: 50px;
 }
-.bigtext{
+
+.bigtext {
     font-family: cursive;
     font-size: 1.2em;
     box-sizing: border-box;
     width: 100%;
-    height:100%;
+    height: 100%;
 }
-.Aicons{
+
+.Aicons {
     display: flex;
     flex-direction: row;
     padding: 50px;
     /* width: 50%; */
 }
-.Bicons{
+
+.Bicons {
     display: flex;
     flex-direction: row;
     margin-left: auto;
     padding: 30px;
     /* width: 50%; */
 }
-.icons{
+
+.icons {
     display: flex;
     flex-direction: row;
     /* width:100%; */
     box-sizing: border-box;
     /* height:100%; */
-    
+
 }
-.icons .fa{
+
+.icons .fa {
     font-size: 18px;
     padding: 5px;
 }
-.update{
+
+.update {
     /* width: 25%; */
     color: #989898;
     font-weight: bolder;
     padding: 5px;
 
 }
-.mail{
+
+.mail {
     border-radius: 8px;
     border-style: solid;
     color: #989898;
     padding: 2px;
     /* width: 25%; */
 }
-.footer-navbar{
+
+.footer-navbar {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 15px;
     padding: 15px 20px;
-    }
-    ul{
-        list-style-type: none;
-        padding: 10px;
-        display: block;
-    }
-    li{
-        color: #989898;
-    }
-    /* @media screen and (min-width: 825px){ */
-        /* .hamburger{
+}
+
+ul {
+    list-style-type: none;
+    padding: 10px;
+    display: block;
+}
+
+li {
+    color: #989898;
+}
+
+/* @media screen and (min-width: 825px){ */
+/* .hamburger{
             width: 25px;
             padding-top: 30px;
             margin-right: auto;
@@ -285,12 +339,12 @@ padding-left: 100px;
             margin-top: 6px;
             margin-bottom: 6px;
         } */
-        /* body{
+/* body{
             background-color: burlywood; 
              display: flex;
             flex-direction: column; 
             } */
-            /* .background-img{
+/* .background-img{
                 width: 97%;
             }
         .apparelpics{
@@ -306,54 +360,67 @@ padding-left: 100px;
             width: 98%
         }
         } */
-        @media only screen
-        and (min-width: 540px)
-        and (max-width: 825px){
-        .footer-navbar{
-            display: block;
-            text-align: center;
-        } 
-        .footer-navbar li{
-            display: none;
-        }  
-        .menu, .navbar{
-                display: none;
-        }
-        .ham{
-            display: block;
-            margin-top: 10px;
-        }
-        .bpic{
-            /* display: none; */
-            object-fit: contain;
-        }
-        .apparelpics, .hrmonitorpics, .selfiepics{
-            display: block;
-            /* flex-direction: column; */
-        }
-        /* .tinyimg{
+@media only screen and (min-width: 540px) and (max-width: 825px) {
+    .footer-navbar {
+        display: block;
+        text-align: center;
+    }
+
+    .footer-navbar li {
+        display: none;
+    }
+
+    .menu,
+    .navbar {
+        display: none;
+    }
+
+    .ham {
+        display: block;
+        margin-top: 10px;
+    }
+
+    .bpic {
+        /* display: none; */
+        object-fit: contain;
+    }
+
+    .apparelpics,
+    .hrmonitorpics,
+    .selfiepics {
+        display: block;
+        /* flex-direction: column; */
+    }
+
+    /* .tinyimg{
             width: 75%;
             align-content: center;
             align-self: center;
             object-fit: contain;
         } */
-        .bikertext{
-            text-align: center;
-        }
-        .Bicons{
-            display: block;
-        }
-        .Aicons{
-            display: block;
-            /* flex-direction: column; */
-        }
-        .footer-text, .bigtext{
-            text-align: center;
-        }
-        .background-img{
-            text-align: center;
-        }
-        /* .top-icon .fa{
+    .bikertext {
+        text-align: center;
+    }
+
+    .Bicons {
+        display: block;
+    }
+
+    .Aicons {
+        display: block;
+        /* flex-direction: column; */
+    }
+
+    .footer-text,
+    .bigtext {
+        text-align: center;
+    }
+
+    .background-img {
+        text-align: center;
+    }
+
+    /* .top-icon .fa{
             display: block;
         } */
-        }
+}
